Fix Toolbox icon margin Y spacing

--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,12 @@ img:hover {
   background-color: red;
   color: red;
 }
+
+.accordion-button:not(.collapsed) {
+  background-color: #0f9d58;
+  color: white;
+}
+
+.accordion-button:hover {
+  background-color: #0f9d58;
+}
